# cantor36-rs

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
.github/scripts/: ci.bash
.github/workflows/: ci.yml
examples/: a_kb.rs  blinky_led.rs  button.rs  button_exti.rs
src/: config.rs  hid.rs  keymap_basic.rs  keymap_borisfaure.rs  keymap_test.rs  keys.rs  layout.rs  lib.rs  main.rs  mouse.rs  side.rs
