[package]
name = "cantor36-rs"
version = "0.1.0"
authors = ["Boris Faure <boris@fau.re>"]
edition = "2021"

[features]
keymap_basic = []
keymap_borisfaure = []
keymap_test = []
right = []
left = []
default = ["keymap_borisfaure"]
#default = ["left","keymap_borisfaure"]

[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
#cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-rtic = "1.1"
stm32f4xx-hal = { version = "0.16", features = ["rtic", "rtic-monotonic", "stm32f401", "usb_fs"] }
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usb-device= "0.2"
systick-monotonic = "1.0"
keyberon = { git = "https://github.com/borisfaure/keyberon", branch = "sequences" }
#keyberon = { path = "../keyberon" }
embedded-hal = "0.2"
nb = "1.0"

[profile.release]
opt-level = 'z'
lto = true
incremental = false
