[package]
name = "cantor36-rs"
version = "0.1.0"
authors = ["Boris Faure <boris@fau.re>"]
edition = "2021"

[features]
keymap_basic = []
keymap_borisfaure = []
keymap_test = []
right = []
left = []
default = ["left", "keymap_borisfaure"]

[dependencies]
embassy-stm32 = {    git = "https://github.com/borisfaure/embassy", branch="mut-hid-request-handler", features = ["defmt", "stm32f401cd", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = {     git = "https://github.com/borisfaure/embassy", branch="mut-hid-request-handler", features = ["defmt"] }
embassy-executor = { git = "https://github.com/borisfaure/embassy", branch="mut-hid-request-handler", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = {     git = "https://github.com/borisfaure/embassy", branch="mut-hid-request-handler", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = {      git = "https://github.com/borisfaure/embassy", branch="mut-hid-request-handler", features = ["defmt" ] }
#embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "stm32f401cd", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
#embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt" ] }

keyberon = { git = "https://github.com/borisfaure/keyberon", branch = "shifted_seq" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.7.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}



[profile.release]
opt-level = 'z'
lto = true
incremental = false
