[package]
name = "cantor36-rs"
version = "0.1.0"
authors = ["Boris Faure <boris@fau.re>"]
edition = "2021"

[features]
keymap_basic = []
keymap_borisfaure = []
keymap_test = []
right = []
left = []
default = ["left", "keymap_borisfaure"]

[dependencies]
embassy-stm32 = { version = "0.3", features = ["defmt", "stm32f401cd", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.8", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5", features = ["defmt" ] }
embassy-futures = "0.1"
usbd-hid = "0.8.2"

keyberon = { git = "https://github.com/borisfaure/keyberon", branch = "shifted_seq" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.9", default-features = false }
nb = "1.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}



[profile.release]
opt-level = 'z'
lto = true
incremental = false
